--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 #hibernate.dialect=org.hibernate.dialect.HSQLDialect
 #hibernate.show_sql=true
 
-eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
-eureka.client.instance.preferIpAddress = true
-spring.application.name = eurekaclient
+server.port=8080
+
+#spring.security.user.name=box
+#spring.security.user.password=box
